--- a/notebooks/1_golems_owls.ipynb
+++ b/notebooks/1_golems_owls.ipynb
@@ -13,7 +13,12 @@
     "- Do the bidding of their masters \n",
     "\n",
     "The workflow (or how to draw an owl)\n",
-    "- "
+    "\n",
+    "1. Formulate question/goal/estimand\n",
+    "2. Create scientific/generative model\n",
+    "3. Create statistical model \n",
+    "4. Validate model\n",
+    "5. Analyze data"
    ]
   },
   {
