--- a/notebooks/sidequests/quadratic_approximation.ipynb
+++ b/notebooks/sidequests/quadratic_approximation.ipynb
@@ -157,7 +157,8 @@
    "metadata": {},
    "source": [
     "### Linear approximation\n",
-    "\n"
+    "\n",
+    "To be continued..."
    ]
   },
   {
@@ -165,15 +166,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Quadratic approximation"
+    "### Quadratic approximation\n",
+    "\n",
+    "To be continued..."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
