--- a/notebooks/8_mcmc.ipynb
+++ b/notebooks/8_mcmc.ipynb
@@ -28,7 +28,9 @@
    "source": [
     "## Metropolis algorithm\n",
     "\n",
-    "Example:\n",
+    "Easy to understand, very general, often inefficient.\n",
+    "\n",
+    "**Example**\n",
     "\n",
     "Imagine an archipelago with $J$ Islands that each have a population of $p_j$. The islands are 1-dimensionally sorted by increasing population sizes and in each turn you can move between two neighboring islands. By definition the largest and smallest island are considered neighbors (wrap-around) with the smallest island being to the \"right\" of the largest island (although it's 1-dimensionally all the way to the left). \n",
     "\n",
